# weaviate-bedrock-demo

./: README.md  docker-build-index-lambda.ps1  docker-build-weaviate-endpoint.ps1  samconfig.toml  template.yaml
.aws-sam/: build.toml
local-invoke/: sam-local-invoke-index.ps1  sam-local-invoke-index.sh  sam-local-invoke-start-api.ps1  sam-local-invoke-start-api.sh
local-invoke/events-and-env-vars/index/: env-vars.json  event.json
local-invoke/events-and-env-vars/start-api/: env-vars.json
src/index/: Dockerfile  app.py  pip-freeze.ps1  pip-freeze.sh  requirements-frozen.txt  requirements.txt
src/index/index_file/: __init__.py
src/shared/: pyproject.toml
src/shared/src/weaviate_demo_shared/: bedrock_wrappers.py
src/shared/src/weaviate_demo_shared/weaviate_wrappers/: __init__.py
src/weaviate/: Dockerfile  app.py  app_.py  requirements copy.txt  requirements-frozen.txt
